// Vitest Snapshot v1

exports[`Breadcrumbs > renders breadcrumbs with links 1`] = `
"<div class=\\"breadcrumbs\\" data-v-7650ef71=\\"\\">
  <breadcrumb-stub name=\\"g\\" icon=\\"g\\" link=\\"/g\\" class=\\"item\\" data-v-7650ef71=\\"\\"></breadcrumb-stub>
  <breadcrumb-stub name=\\"b\\" icon=\\"b\\" link=\\"/b\\" class=\\"item\\" data-v-7650ef71=\\"\\"></breadcrumb-stub>
</div>"
`;

exports[`Breadcrumbs > renders default Breadcrumbs 1`] = `
"<div class=\\"breadcrumbs\\" data-v-7650ef71=\\"\\">
  <breadcrumb-stub name=\\"g\\" icon=\\"g\\" class=\\"item\\" data-v-7650ef71=\\"\\"></breadcrumb-stub>
</div>"
`;

exports[`Breadcrumbs > renders empty array 1`] = `"<div class=\\"breadcrumbs\\" data-v-7650ef71=\\"\\"></div>"`;

exports[`Breadcrumbs renders breadcrumbs with links 1`] = `
<div class="breadcrumbs">
  <breadcrumb-stub icon="g" name="g" link="/g" class="item"></breadcrumb-stub>
  <breadcrumb-stub icon="b" name="b" link="/b" class="item"></breadcrumb-stub>
</div>
`;

exports[`Breadcrumbs renders default Breadcrumbs 1`] = `
<div class="breadcrumbs">
  <breadcrumb-stub icon="g" name="g" class="item"></breadcrumb-stub>
</div>
`;

exports[`Breadcrumbs renders empty array 1`] = `<div class="breadcrumbs"></div>`;
